--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,53 @@ nav a {
 nav h1 {
     font-size: 24px;
 }
+
+/* Hero styles */
+
+.hero-container {
+    color: #F9FAF8;
+    background-color: #1F2937;
+
+    padding: 75px 150px;
+
+    display: flex;
+    justify-content: space-between;
+    gap: 40px;
+}
+
+.hero-container h1 {
+    font-size: 48px;
+    font-weight: 900;
+}
+
+.hero-container p {
+    color: #E5E7EB;
+
+    font-size: 18px;
+}
+
+.hero-container button {
+    color: #F9FAF8;
+    background-color: #3882F6;
+
+    font-size: 18px;
+    font-weight: 900;
+
+    padding: 8px 30px;
+
+    border: none;
+    border-radius: 5px;
+}
+
+.hero-container img {
+    width: 524px;
+    height: auto;
+}
+
+.hero-left h1 {
+    margin-bottom: 5px;
+}
+
+.hero-left p {
+    margin-bottom: 10px;
+}
