--- a/styles.css
+++ b/styles.css
@@ -127,3 +127,31 @@ nav h1 {
     border: 4px, solid, #3882F6;
     border-radius: 10px;
 }
+
+/* Quote styles */
+
+.quote-container {
+    color: #1F2937;
+    background-color: #E5E7EB;
+
+    padding: 100px 280px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.quote {
+    font-size: 36px;
+    font-weight: 300;
+    font-style: italic;
+
+    align-self: center;
+}
+
+.author {
+    font-size: 24px;
+    font-weight: 900;
+
+    align-self: flex-end;
+}
