--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,19 @@
     font-family: "Roboto", sans-serif;
 }
 
+button {
+    color: #F9FAF8;
+    background-color: #3882F6;
+
+    font-size: 18px;
+    font-weight: 900;
+
+    padding: 8px 30px;
+
+    border: none;
+    border-radius: 5px;
+}
+
 /* Navbar styles */
 
 nav {
@@ -59,19 +72,6 @@ nav h1 {
     color: #E5E7EB;
 
     font-size: 18px;
-}
-
-.hero-container button {
-    color: #F9FAF8;
-    background-color: #3882F6;
-
-    font-size: 18px;
-    font-weight: 900;
-
-    padding: 8px 30px;
-
-    border: none;
-    border-radius: 5px;
 }
 
 .hero-container img {
@@ -156,4 +156,32 @@ nav h1 {
     font-weight: 900;
 
     align-self: flex-end;
+}
+
+/* CTA style */
+
+.cta {
+    color: #F9FAF8;
+    background-color: #3882F6;
+
+    margin: 100px 175px;
+    padding: 50px 25px;
+
+    border-radius: 10px;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.cta p {
+    color: #E5E7EB;
+}
+
+.cta h1 {
+    font-size: 24px;
+}
+
+.cta button {
+    border: #F9FAF8 solid 2px;
 }
