--- a/styles.css
+++ b/styles.css
@@ -185,3 +185,14 @@ nav h1 {
 .cta button {
     border: #F9FAF8 solid 2px;
 }
+
+/* Footer styles */
+footer {
+    color: #F9FAF8;
+    background-color: #1F2937;
+
+    font-size: 18px;
+
+    padding: 40px;
+    text-align: center;
+}
